--- a/web/css/style.css
+++ b/web/css/style.css
@@ -19,7 +19,7 @@ a {
     padding-left: 1%;
 }
 
-.containerTopPadding {
+.container-top-padding {
     padding-top: 100px;
 }
 
@@ -29,11 +29,14 @@ a {
     align-items: center;
 }
 
-.divCentre {
-    margin-left: auto;
-    margin-right: auto;
-}
-
 .about {
     float: right;
+}
+
+.error-message {
+    color: #cf0000;
+}
+
+.registered {
+    color: #00ac00;
 }
