Form validation has been improved Fixed bugs concerning page forwarding Added new jsp pages which improve design Interface became more understandable

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -26,20 +26,12 @@ a {
     align-items: center;
 }
 
-.error-message {
+.error-message, .declined, .banned {
     color: #cf0000;
 }
 
-.declined {
-    color: #cf0000;
-}
-
-.registered {
+.registered, .success {
     color: #00ac00;
-}
-
-.success {
-    color: #00bc00;
 }
 
 .confirmed {
